# pcem

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: test-debug-builds.yml  test-release-builds.yml  test-relwithdebinfo-builds.yml  workflow.yml
src/: CMakeLists.txt  pc.c
src/disc/: disc.c
src/floppy/: fdc.c
src/hdd/: hdd_file.c
src/ide/: ide.c
src/keyboard/: keyboard_amstrad.c  keyboard_at.c  keyboard_olim24.c  keyboard_pcjr.c  keyboard_xt.c
src/models/: grid.c  model.c
src/networking/slirp/: slirp.c
src/plugin-api/: plugin-api.cmake
src/scsi/: scsi_53c400.c  scsi_aha1540.c
src/sound/: sound.c  sound.cmake  sound_mmb.c
src/video/: vid_quadcolor.c  vid_s3.c
src/wx-ui/: wx-config.c  wx-createdisc.cc
